--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>EnfrokOS</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+  <title>Enfrok OS</title>
   <style>
     * {
       margin: 0;
@@ -15,15 +14,42 @@
     body, html {
       width: 100%;
       height: 100%;
-      font-family: -apple-system, BlinkMacSystemFont, "San Francisco", "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+      font-family: -apple-system, BlinkMacSystemFont, 'San Francisco', sans-serif;
       background-color: #888;
-      color: white;
+      background-size: cover;
       overflow: hidden;
     }
 
-    .fade {
-      opacity: 1;
+    #startup-screen, #login-screen, #notice-screen, #conditions-screen {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.9);
+      color: white;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      z-index: 2000;
+      padding: 20px;
+      text-align: center;
       transition: opacity 1s ease;
+    }
+
+    #startup-screen input, #startup-screen button,
+    #login-screen input, #login-screen button,
+    #notice-screen button, #conditions-screen button {
+      margin-top: 10px;
+      padding: 10px;
+      font-size: 1rem;
+    }
+
+    .error-text {
+      color: red;
+      font-size: 0.9rem;
+      margin-top: 5px;
     }
 
     .hidden {
@@ -31,260 +57,101 @@
       pointer-events: none;
     }
 
-    .screen {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      padding: 20px;
-      text-align: center;
-      background-color: rgba(0,0,0,0.9);
-      z-index: 1000;
-    }
-
-    input, button {
-      padding: 10px;
-      margin: 10px;
-      font-size: 1rem;
-    }
-
     .taskbar {
       position: absolute;
       bottom: 0;
       width: 100%;
       height: 40px;
-      background: rgba(20, 20, 20, 0.9);
+      background-color: rgba(30, 30, 30, 0.85);
       display: flex;
       align-items: center;
       padding: 0 10px;
-      gap: 10px;
     }
 
     .icon {
       width: 32px;
       height: 32px;
-      background-color: white;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      border-radius: 6px;
+      margin-right: 10px;
       cursor: pointer;
-      color: black;
     }
 
     .window {
       position: absolute;
-      top: 80px;
-      left: 80px;
+      top: 100px;
+      left: 100px;
       width: 500px;
       height: 400px;
-      background: #fff;
-      color: #000;
-      border-radius: 6px;
+      background-color: #fff;
+      border: 1px solid #ccc;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
       display: none;
       flex-direction: column;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
     }
 
     .window-header {
-      background-color: #444;
-      color: #fff;
-      padding: 8px;
-      font-weight: bold;
+      background-color: #0078d7;
+      color: white;
+      padding: 5px 10px;
+      cursor: move;
     }
 
     .window-body {
-      padding: 15px;
-      overflow-y: auto;
+      padding: 10px;
       flex-grow: 1;
+    }
+
+    input[type='text'], input[type='password'] {
+      padding: 8px;
+      font-size: 1.2rem;
+      margin-bottom: 10px;
+    }
+
+    button {
+      padding: 10px;
+      font-size: 1rem;
+      margin: 5px 2px;
+    }
+
+    audio, iframe {
+      width: 100%;
     }
   </style>
 </head>
 <body>
-  <div id="setup-screen" class="screen fade">
+  <!-- Startup Screen -->
+  <div id="startup-screen">
     <h1>Welcome to EnfrokOS!</h1>
-    <p>You're about to set up your OS. Info:</p>
-    <ul style="text-align:left; max-width: 600px;">
-      <li>• Spotify and Wikipedia supported in Browser.</li>
-      <li>• Spotify app lets you search your favorite artists worldwide.</li>
-      <li>• You'll login with the password you set now.</li>
+    <p>Hi there! You're about to set up your personalized OS. Here's what to know before we begin:</p>
+    <ul style="text-align:left; max-width: 600px; margin: 20px auto;">
+      <li>This OS supports Spotify and Wikipedia only in its browser.</li>
+      <li>Search for your favorite artists or songs via the Spotify app.</li>
+      <li>You can log in using any password you set during this setup.</li>
     </ul>
-    <input type="text" id="setup-name" placeholder="Enter your name" />
-    <input type="password" id="setup-password" placeholder="Create password (6+ digits)" />
-    <p id="setup-error" style="color:red;"></p>
+    <input type="text" id="setup-name" placeholder="Enter your name">
+    <input type="password" id="setup-password" placeholder="Create a password">
+    <div id="password-error" class="error-text"></div>
     <button onclick="completeSetup()">Continue</button>
   </div>
 
-  <div id="conditions-screen" class="screen fade hidden">
-    <h2>Conditions in EnfrokOS</h2>
-    <ul style="text-align:left; max-width: 600px;">
-      <li>• Minimising on EnfrokOS is currently not available.</li>
-      <li>• There are currently four apps: Spotify, Browser, Settings and Calculator.</li>
-      <li>• Settings app is incomplete and would be functioning soon.</li>
-      <li>• Shifting the apps from one place to another is not available yet.</li>
-    </ul>
-    <button onclick="showLogin()">Continue</button>
-  </div>
-
-  <div id="login-screen" class="screen fade hidden">
-    <h1>Enter your password to login</h1>
-    <input type="password" id="login-password" placeholder="Password" />
-    <p id="login-error" style="color:red;"></p>
-    <button onclick="verifyLogin()">Login</button>
-  </div>
-
-  <div id="desktop" class="fade hidden">
-    <h1 id="desktop-title"></h1>
-    <div class="taskbar">
-      <div class="icon" onclick="openApp('browser')"><i class="fas fa-globe"></i></div>
-      <div class="icon" onclick="openApp('spotify')"><i class="fab fa-spotify"></i></div>
-      <div class="icon" onclick="openApp('calculator')"><i class="fas fa-calculator"></i></div>
-      <div class="icon" onclick="openApp('settings')"><i class="fas fa-cog"></i></div>
-    </div>
-  </div>
-
-  <div id="browser" class="window">
-    <div class="window-header">Browser</div>
-    <div class="window-body">
-      <input type="text" id="url" placeholder="Enter URL (https://...)" style="width: 100%;" />
-      <button onclick="loadWebsite()">Go</button>
-      <iframe id="webview" style="width: 100%; height: 80%;"></iframe>
-    </div>
-  </div>
-
-  <div id="spotify" class="window">
-    <div class="window-header">Spotify</div>
-    <div class="window-body">
-      <iframe src="https://open.spotify.com/embed" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
-    </div>
-  </div>
-
-  <div id="calculator" class="window">
-    <div class="window-header">Calculator</div>
-    <div class="window-body">
-      <input type="text" id="calc-display" readonly style="width: 100%; font-size: 24px;" /><br/>
-      <button onclick="appendCalc('1')">1</button>
-      <button onclick="appendCalc('2')">2</button>
-      <button onclick="appendCalc('3')">3</button>
-      <button onclick="appendCalc('+')">+</button><br/>
-      <button onclick="appendCalc('4')">4</button>
-      <button onclick="appendCalc('5')">5</button>
-      <button onclick="appendCalc('6')">6</button>
-      <button onclick="appendCalc('-')">-</button><br/>
-      <button onclick="appendCalc('7')">7</button>
-      <button onclick="appendCalc('8')">8</button>
-      <button onclick="appendCalc('9')">9</button>
-      <button onclick="appendCalc('*')">*</button><br/>
-      <button onclick="appendCalc('0')">0</button>
-      <button onclick="appendCalc('.')">.</button>
-      <button onclick="calculate()">=</button>
-      <button onclick="appendCalc('/')">/</button>
-      <button onclick="clearCalc()">C</button>
-    </div>
-  </div>
-
-  <div id="settings" class="window">
-    <div class="window-header">Settings</div>
-    <div class="window-body">
-      <p>Settings won't work as it is incomplete.</p>
-    </div>
-  </div>
-
   <script>
-    let userPassword = "";
-    let userName = "User";
+    let setupPassword = "";
+    let setupName = "";
 
     function completeSetup() {
       const name = document.getElementById("setup-name").value.trim();
       const pass = document.getElementById("setup-password").value.trim();
-      const error = document.getElementById("setup-error");
+      const errorBox = document.getElementById("password-error");
 
       if (pass.length < 6) {
-        error.textContent = "Password should be minimum 6 digits.";
+        errorBox.textContent = "Password should be minimum 6 digits.";
         return;
       }
 
-      userPassword = pass;
-      userName = name || "User";
+      setupPassword = pass;
+      setupName = name || "User";
 
-      fadeTo("setup-screen", "conditions-screen");
-    }
-
-    function showLogin() {
-      fadeTo("conditions-screen", "login-screen");
-    }
-
-    function verifyLogin() {
-      const pass = document.getElementById("login-password").value.trim();
-      const error = document.getElementById("login-error");
-
-      if (pass.length < 6) {
-        error.textContent = "Password should be minimum 6 digits.";
-        return;
-      }
-
-      if (pass !== userPassword) {
-        error.textContent = "Incorrect password.";
-        return;
-      }
-
-      document.getElementById("desktop-title").textContent = `Welcome to your desktop, ${userName}`;
-      fadeTo("login-screen", "desktop");
-    }
-
-    function fadeTo(fromId, toId) {
-      document.getElementById(fromId).classList.add("hidden");
-      setTimeout(() => {
-        document.getElementById(fromId).style.display = "none";
-        document.getElementById(toId).style.display = "flex";
-        setTimeout(() => {
-          document.getElementById(toId).classList.remove("hidden");
-        }, 50);
-      }, 1000);
-    }
-
-    function openApp(id) {
-      document.querySelectorAll('.window').forEach(win => win.style.display = 'none');
-      document.getElementById(id).style.display = 'flex';
-    }
-
-    function loadWebsite() {
-      const input = document.getElementById("url").value;
-      const frame = document.getElementById("webview");
-      if (input.startsWith("https://")) {
-        if (input.includes("wikipedia") || input.includes("spotify")) {
-          frame.src = input;
-        } else {
-          frame.srcdoc = "<p style='color:red;'>Website not supported by this OS.</p>";
-        }
-      } else {
-        frame.srcdoc = "<p style='color:red;'>Add https:// to run or if it doesn't work, the website is not supported.</p>";
-      }
-    }
-
-    let calcExpression = "";
-    function appendCalc(val) {
-      calcExpression += val;
-      document.getElementById("calc-display").value = calcExpression;
-    }
-
-    function calculate() {
-      try {
-        calcExpression = eval(calcExpression).toString();
-        document.getElementById("calc-display").value = calcExpression;
-      } catch {
-        document.getElementById("calc-display").value = "Error";
-      }
-    }
-
-    function clearCalc() {
-      calcExpression = "";
-      document.getElementById("calc-display").value = "";
+      document.getElementById("startup-screen").classList.add("hidden");
+      // Continue logic to load next screen (not shown here)
     }
   </script>
 </body>
