--- a/index.html
+++ b/index.html
@@ -1,157 +1,194 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Enfrok OS</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>EnfrokOS</title>
   <style>
     * {
       margin: 0;
       padding: 0;
       box-sizing: border-box;
     }
-
-    body, html {
+    html, body {
       width: 100%;
       height: 100%;
       font-family: -apple-system, BlinkMacSystemFont, 'San Francisco', sans-serif;
       background-color: #888;
-      background-size: cover;
       overflow: hidden;
     }
-
-    #startup-screen, #login-screen, #notice-screen, #conditions-screen {
+    .screen {
       position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background-color: rgba(0, 0, 0, 0.9);
-      color: white;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      z-index: 2000;
+      background-color: rgba(0, 0, 0, 0.9);
+      color: white;
       padding: 20px;
       text-align: center;
       transition: opacity 1s ease;
     }
-
-    #startup-screen input, #startup-screen button,
-    #login-screen input, #login-screen button,
-    #notice-screen button, #conditions-screen button {
-      margin-top: 10px;
+    .hidden { opacity: 0; pointer-events: none; }
+    input, button {
       padding: 10px;
       font-size: 1rem;
+      margin-top: 10px;
     }
-
-    .error-text {
-      color: red;
-      font-size: 0.9rem;
-      margin-top: 5px;
-    }
-
-    .hidden {
-      opacity: 0;
-      pointer-events: none;
-    }
-
     .taskbar {
       position: absolute;
       bottom: 0;
       width: 100%;
       height: 40px;
-      background-color: rgba(30, 30, 30, 0.85);
+      background: rgba(30, 30, 30, 0.85);
       display: flex;
       align-items: center;
       padding: 0 10px;
+      gap: 10px;
     }
-
     .icon {
-      width: 32px;
-      height: 32px;
-      margin-right: 10px;
+      width: 32px; height: 32px;
+      background: white;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      border-radius: 5px;
       cursor: pointer;
+      font-size: 14px;
+      font-weight: bold;
+      color: #333;
     }
-
     .window {
       position: absolute;
-      top: 100px;
-      left: 100px;
-      width: 500px;
-      height: 400px;
-      background-color: #fff;
+      top: 80px; left: 100px;
+      width: 400px; height: 300px;
+      background: white;
       border: 1px solid #ccc;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+      box-shadow: 0 0 10px rgba(0,0,0,0.2);
       display: none;
       flex-direction: column;
     }
-
     .window-header {
-      background-color: #0078d7;
+      background: #0078d7;
       color: white;
       padding: 5px 10px;
-      cursor: move;
     }
-
     .window-body {
-      padding: 10px;
       flex-grow: 1;
-    }
-
-    input[type='text'], input[type='password'] {
-      padding: 8px;
-      font-size: 1.2rem;
-      margin-bottom: 10px;
-    }
-
-    button {
       padding: 10px;
-      font-size: 1rem;
-      margin: 5px 2px;
+      overflow: auto;
     }
-
-    audio, iframe {
-      width: 100%;
-    }
+    .error { color: red; font-size: 0.9rem; margin-top: 5px; }
   </style>
 </head>
 <body>
-  <!-- Startup Screen -->
-  <div id="startup-screen">
+  <div id="startup-screen" class="screen">
     <h1>Welcome to EnfrokOS!</h1>
-    <p>Hi there! You're about to set up your personalized OS. Here's what to know before we begin:</p>
-    <ul style="text-align:left; max-width: 600px; margin: 20px auto;">
-      <li>This OS supports Spotify and Wikipedia only in its browser.</li>
-      <li>Search for your favorite artists or songs via the Spotify app.</li>
-      <li>You can log in using any password you set during this setup.</li>
-    </ul>
-    <input type="text" id="setup-name" placeholder="Enter your name">
-    <input type="password" id="setup-password" placeholder="Create a password">
-    <div id="password-error" class="error-text"></div>
+    <p>This OS supports Spotify and Wikipedia in the browser. You can search your favorite singers in Spotify. Enter your name and password to begin.</p>
+    <input type="text" id="name-input" placeholder="Enter your name">
+    <input type="password" id="pass-input" placeholder="Create a password">
+    <div id="setup-error" class="error"></div>
     <button onclick="completeSetup()">Continue</button>
   </div>
 
+  <div id="login-screen" class="screen hidden">
+    <h1 id="login-title">Login</h1>
+    <input type="password" id="login-pass" placeholder="Enter password">
+    <div id="login-error" class="error"></div>
+    <button onclick="attemptLogin()">Login</button>
+  </div>
+
+  <div id="desktop" class="hidden">
+    <div class="taskbar">
+      <div class="icon" onclick="openApp('spotify')">🎵</div>
+      <div class="icon" onclick="openApp('browser')">🌐</div>
+      <div class="icon" onclick="openApp('settings')">⚙️</div>
+      <div class="icon" onclick="openApp('calc')">🧮</div>
+    </div>
+    <div id="spotify" class="window">
+      <div class="window-header">Spotify</div>
+      <div class="window-body">
+        <iframe style="width:100%;height:100%;" src="https://open.spotify.com/embed/" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+      </div>
+    </div>
+    <div id="browser" class="window">
+      <div class="window-header">Browser</div>
+      <div class="window-body">
+        <input type="text" id="url" placeholder="Enter URL"><button onclick="loadSite()">Go</button>
+        <iframe id="iframe" style="width:100%;height:200px;"></iframe>
+        <div id="browser-msg"></div>
+      </div>
+    </div>
+    <div id="settings" class="window">
+      <div class="window-header">Settings</div>
+      <div class="window-body">Settings won't work as it is incomplete.</div>
+    </div>
+    <div id="calc" class="window">
+      <div class="window-header">Calculator</div>
+      <div class="window-body">
+        <input type="text" id="calc-display" readonly style="width:100%; font-size:1.2rem;">
+        <div>
+          <button onclick="calcPress('1')">1</button>
+          <button onclick="calcPress('2')">2</button>
+          <button onclick="calcPress('+')">+</button>
+          <button onclick="calcPress('=')">=</button>
+          <button onclick="calcPress('C')">C</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <script>
-    let setupPassword = "";
-    let setupName = "";
+    let userPass = "";
+    let userName = "User";
 
     function completeSetup() {
-      const name = document.getElementById("setup-name").value.trim();
-      const pass = document.getElementById("setup-password").value.trim();
-      const errorBox = document.getElementById("password-error");
-
+      const name = document.getElementById("name-input").value.trim();
+      const pass = document.getElementById("pass-input").value.trim();
       if (pass.length < 6) {
-        errorBox.textContent = "Password should be minimum 6 digits.";
+        document.getElementById("setup-error").textContent = "Password should be minimum 6 digits.";
         return;
       }
-
-      setupPassword = pass;
-      setupName = name || "User";
-
+      userPass = pass;
+      userName = name || "User";
       document.getElementById("startup-screen").classList.add("hidden");
-      // Continue logic to load next screen (not shown here)
+      document.getElementById("login-title").textContent = userName;
+      document.getElementById("login-screen").classList.remove("hidden");
+    }
+
+    function attemptLogin() {
+      const entered = document.getElementById("login-pass").value;
+      if (entered === userPass) {
+        document.getElementById("login-screen").classList.add("hidden");
+        document.getElementById("desktop").classList.remove("hidden");
+      } else {
+        document.getElementById("login-error").textContent = "Incorrect password.";
+      }
+    }
+
+    function openApp(id) {
+      document.querySelectorAll(".window").forEach(w => w.style.display = "none");
+      document.getElementById(id).style.display = "flex";
+    }
+
+    function loadSite() {
+      const site = document.getElementById("url").value.trim();
+      const msg = document.getElementById("browser-msg");
+      if (site.includes("wikipedia.org") || site.includes("spotify.com")) {
+        document.getElementById("iframe").src = site;
+        msg.textContent = "";
+      } else {
+        msg.textContent = "Add https:// and ensure site is compatible.";
+      }
+    }
+
+    function calcPress(key) {
+      const display = document.getElementById("calc-display");
+      if (key === 'C') display.value = '';
+      else if (key === '=') display.value = eval(display.value || '0');
+      else display.value += key;
     }
   </script>
 </body>
