--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     </div>
     <div id="settings" class="window">
       <div class="window-header">Settings</div>
-      <div class="window-body">Settings won't work as it is incomplete.</div>
+      <div class="window-body">Unable to fetch settings.</div>
     </div>
     <div id="calc" class="window">
       <div class="window-header">Calculator</div>
